--- a/platforms/server/templates/index.ejs
+++ b/platforms/server/templates/index.ejs
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/build/all.min.css' />
     <% } %>
     <!--[if lt IE 10]>
-    <script src="//as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
+    <script src="//as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.jsx,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
     <![endif]-->
   </head>
   <body>
